<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Categories</string>
    <string-array name="categories_array">
        <item>Home</item>
        <item>Books</item>
        <item>Sports</item>
        <item>Clothing/Accessories</item>
        <item>Electronics</item>
        <item>Households</item>
        <item>Housing</item>
        <item>Rides</item>
        <item>Tickets</item>
        <item>Charity</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <!--  Action bar strings -->
    
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="checkout">Checkout</string>
</resources>
